--- a/app/views/layouts/_head.haml
+++ b/app/views/layouts/_head.haml
@@ -25,6 +25,9 @@
   %meta{:"http-equiv" => "content-language", content: "#{I18n.locale}"}
   %meta{name: "twitter:card", content: "summary"}
 
+  %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css", :rel => "stylesheet"}/
+
+
   / Additional meta tags for SEO, etc.
   = content_for :head
   = render :partial => "layouts/marketplace_head"
