--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 // Vendor
 //= require jquery.nouislider
 //= require jquery.fileupload
+//= require jquery.fancybox
 //= require datepicker3
 //= require selectize
 
