--- a/config/deploy/templates/nginx_conf.erb
+++ b/config/deploy/templates/nginx_conf.erb
@@ -40,6 +40,7 @@ server {
   location @puma_<%= fetch(:nginx_config_name) %> {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
+    # proxy_set_header X-Forwarded-Proto https;
     proxy_redirect off;
 <% if fetch(:nginx_use_ssl) -%>
     proxy_set_header X-Forwarded-Proto https;
